--- a/Surrogate/View/ControllerView/MainControllerView.xaml
+++ b/Surrogate/View/ControllerView/MainControllerView.xaml
@@ -16,9 +16,10 @@
                 
                Topmost="False"
                 -->
-    <DockPanel>
+<DockPanel>
         <!-- Menu bar-->
         <Menu DockPanel.Dock="Top"  Background="Transparent">
+            
             <MenuItem Header="Programm">
                 <MenuItem Header="Programm beenden" Click="MenuItem_Click" />
             </MenuItem>
@@ -53,7 +54,7 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
                             </Grid.RowDefinitions>
-                            <StackPanel  Width="200" MaxHeight="50" Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
+                            <StackPanel  Width="230" MaxHeight="50" Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
                                 <Image Source="{Binding Properties.ImagePath}" Height="50" Width="50"></Image>
                                 <TextBlock VerticalAlignment="Center" Text="{Binding Properties.Name}" TextWrapping="Wrap" Padding="10"/>
                             </StackPanel>
@@ -61,7 +62,7 @@
                                 <Rectangle VerticalAlignment="Stretch" Width="1" Height="50" Margin="2" Stroke="Black" />
                             </StackPanel>
                             <StackPanel MaxWidth="200" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center">
-                                <TextBlock TextWrapping="Wrap" Text="{Binding Properties.Description}"  ></TextBlock>
+                                <TextBlock FontSize="15" FontWeight="UltraLight" TextWrapping="Wrap" Text="{Binding Properties.Description}"  ></TextBlock>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
@@ -85,7 +86,18 @@
             <vwl:LoggingView x:Name="spLog"/>
         </StackPanel>
         <Grid Margin="10,36.4,10,0">
-            <StackPanel x:Name="spModule" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,36">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label x:Name="lblModulTitle" HorizontalAlignment="Center" FontSize="20" FontWeight="ExtraBold"
+                   Content="Title of active module" Grid.Column="0" Grid.Row="0" Margin="0,0,0,50"/>
+            <Separator></Separator>
+            <StackPanel x:Name="spModule" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,36"
+                         Grid.Column="0" Grid.Row="1">
                 <Label >Content of current module</Label>
             </StackPanel>
         </Grid>
