--- a/Surrogate/View/HsvPickerView.xaml
+++ b/Surrogate/View/HsvPickerView.xaml
@@ -1,4 +1,4 @@
-﻿<local:ModuleViewBase x:Class="Surrogate.View.ControllerView.ModuleView.HsvPickerView"
+﻿<local:ModuleViewBase x:Class="Surrogate.View.HsvPickerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
